ChangeLog - ljdump

Version 1.3.1 - 2009-01-08

- Handle userpic keywords with non-ASCII characters
- Download and save userpic images

Version 1.2 - 2006-09-08

- Fetch userpic data into userpics.xml

Version 1.1 - 2006-01-09

- Add comment downloading.

Version 1.0.3 - 2005-12-25

- Get updated journal entries in addition to new entries

Version 1.0.2 - 2005-11-25

- Set +x on ljdump.py

Version 1.0.1 - 2005-11-25

- Corrected total items count
- Added shebang line to top of script

Version 1.0 - 2005-11-25

- Initial version