@@ -4,6 +4,7 @@ Version 1.3.1 - 2009-01-08
 
 - Handle userpic keywords with non-ASCII characters
 - Download and save userpic images
+- Handle unexpected empty item
 
 Version 1.2 - 2006-09-08
 
